fix(backend): add allowed headers to cors policy (#195)